--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,10 @@
 html {
     background-color: rgb(43, 43, 43);
 }
+body {
+    color: whitesmoke;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+a {
+    color: whitesmoke;
+}
